# serial_debug_for_ubuntu

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  install.sh  main.cpp  main_GP.cpp  main_SC.cpp  main_SG.cpp
general_purpose_lib/: CMakeLists.txt  loop_class.cpp  loop_class.hpp
graph_plot/: CMakeLists.txt  graph_plot.cpp  graph_plot.hpp
serial_communication/: CMakeLists.txt  serial_communication.cpp  serial_communication.hpp
serial_graph/: CMakeLists.txt  serial_graph.cpp  serial_graph.hpp
